--- a/src/main/resources/assets/fountain_of_end/lang/en_us.json
+++ b/src/main/resources/assets/fountain_of_end/lang/en_us.json
@@ -1,5 +1,5 @@
 {
-  "itemGroup.end_fountain": "Example Mod Tab",
-  "block.end_fountain.example_block": "Example Block",
-  "item.end_fountain.example_item": "Example Item"
+  "itemGroup.fountain_of_end": "Fountain Of End",
+  "block.fountain_of_end.fountain_of_end": "Fountain Of End",
+  "item.fountain_of_end.void_bucket": "Void Bucket"
 }
