--- a/src/main/resources/assets/fountain_of_end/lang/en_us.json
+++ b/src/main/resources/assets/fountain_of_end/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "itemGroup.fountain_of_end": "Fountain Of End",
   "block.fountain_of_end.fountain_of_end": "Fountain Of End",
-  "item.fountain_of_end.void_bucket": "Void Bucket"
+  "item.fountain_of_end.void_bucket": "Void Bucket",
+  "item.fountain_of_end.watchling_spawn_egg": "Watchling SpawnEgg"
 }
